--- a/src/styles.css
+++ b/src/styles.css
@@ -8,3 +8,8 @@ body {
     background: #FAFAFA;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.container {
+    width: 99%;
+    margin: auto;
+}
