Adding a img on the body and some CSS changes

--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -2,6 +2,6 @@
     width: 100%;
     padding: 20px;
     text-align: center;
-    background: #00BFFF;
-    color: #333;
+    background: #000;
+    color: #FFF;
 }
