--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,11 @@
 }
 
 body {
-    background: #FAFAFA;
+    height: 100vh;
+    background-image: url('img/mainbanner.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     font-family: Arial, Helvetica, sans-serif;
 }
 
