--- a/src/components/Sidebar/styles.css
+++ b/src/components/Sidebar/styles.css
@@ -3,6 +3,6 @@ aside {
     height: 600px;
     margin: 5px auto;
     padding: 20px;
-    border: 1px solid #DCDCDC;
+    border: 2px dotted #DCDCDC;
     float: right;
 }
