--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -2,6 +2,6 @@
     width: 100%;
     padding: 20px;
     text-align: center;
-    background: #000;
+    background: rgb(0, 0, 0, 0.5);
     color: #FFF;
 }
