--- a/src/components/Searchbar/styles.css
+++ b/src/components/Searchbar/styles.css
@@ -1,22 +1,30 @@
 form {
+    width: 70%;
+    margin: 0 auto;
     display: flex;
     justify-content: center;
-    align-content: flex-start;
+    align-content: center;
 }
 
 .input-search {
-    padding: 5px;
+    width: 80%;
+    padding: 12px;
+    font-size: 15px;
 }
 
 .input-btn {
+    width: 15%;
+    font-size: 15px;
+    font-weight: bold;
     border: none;
+    border-radius: 3px;
     padding: 5px;
-    color: #000;
-    background: #00AA00;
+    color: #222;
+    background: #0A0;
     cursor: pointer;
 }
 
 .input-btn:hover {
-    background: #00CC00;
+    background: #0B0;
 }
 
